--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "docxtemplater": "^3.49.1",
+    "html-to-docx": "^1.8.0",
+    "prosemirror-model": "^1.22.2",
     "tiptap": "^1.32.1",
     "tiptap-extensions": "^1.35.1",
     "vue": "^2.6.11",
